<resources>
    <string name="add">Add</string>
    <string name="app_name">Dicoding Story</string>
    <string name="camera">Camera</string>
    <string name="create_account">Create Account</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="dicoding">Dicoding</string>
    <string name="email">Email</string>
    <string name="gallery">Gallery</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="invalid_image">Image can\'t be empty</string>
    <string name="invalid_input">Input field can\'t be empty</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="loading">Loading...</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="login_description">Login to your account</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="password">Password</string>
    <string name="photo">Photo</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_description">Create your new account</string>
    <string name="sign_up_hint">Don\'t have an account?</string>
    <string name="story_description">Story Description</string>
    <string name="upload_story">Upload Story</string>
    <string name="welcome">Welcome!</string>
    <string name="yes">Yes</string>
</resources>